update bootstrap, improve web app

--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -199,18 +199,20 @@
         <div class="container-fluid remote-wrapper">
             <fieldset>
                 <legend>REMOTE CONTROL</legend>
-                <div class="remote">
-                    <div class="remote_object" style="left: 58px; top: 78px;">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="img/remote_off.png" alt="" id="remote_img_1">
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li id="remote_change_on_1">On</li>
-                            <li id="remote_change_off_1">Off</li>
-                      </ul>
-                  </div>
-              </div>
             </fieldset>
+            <div class="remote" id="remote_all">
+                <div class="dropdown btn btn-default">
+                    <div id="label_iltis_emm_1_833" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span>ILTIS_EMM_1_833</span>
+                        <img src="img/remote_null.png" alt="img_iltis_emm_1_833" id="img_iltis_emm_1_833"/>
+                        <span class="caret"></span>
+                    </div>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="label_iltis_emm_1_833">
+                        <li><i tabindex="-1" id="on_iltis_emm_1_833">On</i> </li>
+                        <li><i tabindex="-1" id="off_iltis_emm_1_833">Off</i> </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
 
