added support for hierarchical Petrinet Messages

--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+
+    <div class="notification-box"></div>
+
     <div class="page-header">
         <h1>DESM Middleware - Management Interface</h1>
         <div class="container-fluid" id="signin-wrapper">
@@ -75,7 +78,7 @@
                 </button>
 
                 <button class="btn btn-large btn-primary" data-toggle="button" type="button" id="switch_remote">
-                    <span class="glyphicon glyphicon-transfer"></span> RC-PETRINET (OML)
+                    <span class="glyphicon glyphicon-transfer"></span> REMOTE CONTROLE
                 </button>
 
                 <button class="btn btn-large btn-primary" data-toggle="button" type="button" id="switch_log">
@@ -202,7 +205,7 @@
 
         <div class="container-fluid" id="remote-wrapper">
             <fieldset>
-                <legend>Remote Control - Petrinet Obermatt Langnau</legend>
+                <legend>Remote Control</legend>
             </fieldset>
 
             <div role="tabpanel">
