--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -212,16 +212,17 @@
                 <legend>Remote Control</legend>
             </fieldset>
 
-            <div role="tabpanel">
-                <ul class="nav nav-tabs" role="tablist" id="remote_button_nav">
-                </ul>
 
-                <!-- Tab panes -->
-               <div class="tab-content" id="remote_button_pan">
-                </div>
+            <div class="panel-group" id="accordion_remote_controle" role="tablist" aria-multiselectable="true">
+
 
             </div>
+
+
+
+
         </div>
+
 
         <div class="container-fluid log-wrapper">
             <fieldset>
