added gui grouping improvement

--- a/webapp/src/main/webapp/index.html
+++ b/webapp/src/main/webapp/index.html
@@ -212,12 +212,19 @@
                 <legend>Remote Control</legend>
             </fieldset>
 
+            <div role="tabpanel">
 
-            <div class="panel-group" id="accordion_remote_controle" role="tablist" aria-multiselectable="true">
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" role="tablist" id="tab_panel">
 
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content" id="tab_panel_content">
+
+                </div>
 
             </div>
-
 
 
 
