--- a/core/src/main/webapp/index.html
+++ b/core/src/main/webapp/index.html
@@ -19,16 +19,19 @@
 
     <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/site_management.js" type="text/javascript"></script>
+    <script src="js/gui-management.js" type="text/javascript"></script>
 
     <title>DESM Middleware</title>
 </head>
 
 <body>
 
-    <div class="notification-box"></div>
+<div class="notification-box"></div>
+
 
     <div class="page-header">
+
+
         <h1>DESM Middleware - Management Interface</h1>
         <div class="container-fluid" id="signin-wrapper">
             <form class="form-signin">
