test & bugfixing cabine, cabine petrinet, interlocking

--- a/core/src/main/webapp/index.html
+++ b/core/src/main/webapp/index.html
@@ -119,19 +119,13 @@
                             id="init_interlocking">STELLWERK (OML)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="init_petrinet">PETRINET (OML)</button>
+                            id="init_petrinet">PETRINET (OM)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="init_cabine-ubw32">CABINE (DIGITAL)</button>
+                            id="init_petrinet_re420">PETRINET (RE420)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="init_cabine-fabisch">CABINE (ANALOG)</button>
-
-                    <button class="btn btn-large btn-default" type="button"
-                            id="init_locsim-rs232">LOCSIM (RS232)</button>
-
-                    <button class="btn btn-large btn-default" type="button"
-                            id="init_locsim-dll">LOCSIM (DLL)</button>
+                            id="init_cabine-ubw32">CABINE</button>
                 </div>
             </fieldset>
             <fieldset>
@@ -141,19 +135,13 @@
                             id="start_interlocking">STELLWERK (OML)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="start_petrinet">PETRINET (OML)</button>
+                            id="start_petrinet">PETRINET (OM)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="start_cabine-ubw32">CABINE (DIGITAL)</button>
+                            id="start_petrinet_re420">PETRINET (RE420)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="start_cabine-fabisch">CABINE (ANALOG)</button>
-
-                    <button class="btn btn-large btn-default" type="button"
-                            id="start_locsim-rs232">LOCSIM (RS232)</button>
-
-                    <button class="btn btn-large btn-default" type="button"
-                            id="start_locsim-dll">LOCSIM (DLL)</button>
+                            id="start_cabine-ubw32">CABINE</button>
                 </div>
             </fieldset>
             <fieldset>
@@ -163,19 +151,13 @@
                             id="stop_interlocking">STELLWERK (OML)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="stop_petrinet">PETRINET (OML)</button>
+                            id="stop_petrinet">PETRINET (OM)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="stop_cabine-ubw32">CABINE (DIGITAL)</button>
+                            id="stop_petrinet_re420">PETRINET (RE420)</button>
 
                     <button class="btn btn-large btn-default" type="button"
-                            id="stop_cabine-fabisch">CABINE (ANALOG)</button>
-
-                    <button class="btn btn-large btn-default" type="button"
-                            id="stop_locsim-rs232">LOCSIM (RS232)</button>
-
-                    <button class="btn btn-large btn-default" type="button"
-                            id="stop_locsim-dll">LOCSIM (DLL)</button>
+                            id="stop_cabine-ubw32">CABINE</button>
                 </div>
             </fieldset>
         </div>
