--- a/core/src/main/webapp/index.html
+++ b/core/src/main/webapp/index.html
@@ -42,6 +42,8 @@
                 <div class="btn-group">
                     <label for="hostname">Server</label>
                     <select id="hostname">
+                        <option>192.168.1.19</option>
+                        <option>simulation1-pc</option>
                         <option>heisenberg</option>
                         <option>raspberrypi</option>
                     </select>
